--- a/src/components/Uploader.module.css
+++ b/src/components/Uploader.module.css
@@ -169,3 +169,17 @@
         transform: translateY(0);
     }
 }
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.animate-spin {
+    animation: spin 1s linear infinite !important;
+}
